--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
-scikit-learn
-joblib
-matplotlib
-shap
+# Force compatible versions
+numpy==1.24.4
+scikit-learn==1.3.2
+joblib==1.3.2
 streamlit==1.35.0
-pandas
-numpy==1.24.0
-
+pandas==2.0.3
